Fixed copyright text wrap on small screens

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -321,7 +321,7 @@ a.footer{
     }
 
     .copyright.text-muted.small{
-        font-size: 12px;
+        font-size: 10px;
     }
 
 }
